gitops/apps/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-service
  labels:
    app: evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  strategy: {}
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: evaluation-service
      containers:
      - name: evaluation-service
        image: 056007986659.dkr.ecr.us-east-1.amazonaws.com/fiap-fase2/evaluation-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8004
        volumeMounts:
        - name: secrets-store-inline
          mountPath: /mnt/secrets-store
          readOnly: true
        readinessProbe:
          httpGet:
            path: /evaluation/health
            port: 8004
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /evaluation/health
            port: 8004
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: evaluation-service-secrets
