gitops/apps/evaluation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service
  namespace: evaluation-service
  annotations:
    alb.ingress.kubernetes.io/group.name: fiap-fase2-prod
    alb.ingress.kubernetes.io/group.order: "40"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /evaluation/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /evaluation/health
            pathType: Exact
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
          - path: /evaluation
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
